--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Longpoll and WebSocket Chat</title>
+    <title>Lil WebSocket Chat</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
   </head>
   <body>
