--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Lil WebSocket Chat</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
   </head>
   <body>
     <div id="app"></div>
