--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lil WebSocket Chat</title>
     <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
   </head>
