--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lil WebSocket Chat</title>
-    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
+    <!-- <link rel="icon" type="image/png" href="/images/favicon.png"> -->
+    <link rel="stylesheet" type="text/css" href="/styles.css">
   </head>
   <body>
     <div id="app"></div>
