--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lil WebSocket Chat</title>
-    <!-- <link rel="icon" type="image/png" href="/images/favicon.png"> -->
     <link rel="stylesheet" type="text/css" href="/styles.css">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"> -->
+    <!-- <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext"
+      rel="stylesheet"> -->
+    <!-- <link rel="icon" type="image/png" href="/images/favicon.png"> -->
   </head>
   <body>
     <div id="app"></div>
