--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <title>Lil WebSocket Chat</title>
     <!-- <base href="/"> to leave off "/" for bundle.js and other assets -->
     <link rel="stylesheet" type="text/css" href="/styles.css">
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"> -->
     <!-- <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext"
-      rel="stylesheet"> -->
+    > -->
+    <!-- needed by "material-ui-next": -->
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"> -->
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
     <link rel="icon" type="image/png" href="/assets/img/favicon-32x32.png">
   </head>
   <body>
