Enable html-webpack-plugin. Extract AppBar component

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lil WebSocket Chat</title>
-    <!-- <base href="/"> to leave off "/" for bundle.js and other assets -->
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-    <!-- <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext"
-    > -->
-    <!-- needed by "material-ui-next": -->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"> -->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
-    <link rel="icon" type="image/png" href="/assets/img/favicon-32x32.png">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/bundle.js"></script>
-  </body>
+<html lang="en" >
+<head>
+  <meta charset="utf-8">
+  <title>Local Chat</title>
+  
+  <link rel="shortcut icon" href="/favicon.png">
+  
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  
+  <link href="/css/vendors~bundle.f7c4a2c4ea59a7e89e0a.css" rel="stylesheet">
+  
+  <link href="/css/styles.5f9698168dcf42c4a5c8.css" rel="stylesheet">
+  
+</head>
+<body>
+
+<div id="app"></div>
+
+
+<script src="/js/vendors~bundle.cd940387f2e3f7a6d5f6.js"></script>
+
+<script src="/js/bundle.4a6718c5c804b244e037.js"></script>
+
+</body>
 </html>
